--- a/public/main/template/default/skill/drh_report.html.twig
+++ b/public/main/template/default/skill/drh_report.html.twig
@@ -4,7 +4,7 @@
             {{ 'Skills wheel'|trans }}
         </a>
         {% if allow_drh_skills_management %}
-            <a class="btn btn--plain" href="{{ _p.web_main }}skills/skills_wheel.php">
+            <a class="btn btn--plain" href="{{ url('skill_wheel') }}">
                 {{ 'Manage skills'|trans }}
             </a>
         {% endif %}
