Display: Fix styles for autocomplete, buttons and cards components

--- a/assets/css/scss/atoms/_autocomplete.scss
+++ b/assets/css/scss/atoms/_autocomplete.scss
@@ -92,7 +92,7 @@
     @apply cursor-default inline-flex items-center flex-initial;
 
     &-icon {
-      @apply cursor-pointer;
+      @apply cursor-pointer inline-flex;
     }
   }
 
