--- a/assets/css/scss/organisms/_cards.scss
+++ b/assets/css/scss/organisms/_cards.scss
@@ -1,5 +1,5 @@
 .p-card {
-  @apply rounded-lg shadow-lg;
+  @apply rounded-lg bg-white drop-shadow-lg;
 
   .p-card-body {
     @apply flex flex-col space-y-4 p-4;
