Display: Fix double anchor tag for custom router-link

--- a/assets/css/scss/molecules/_course_tool.scss
+++ b/assets/css/scss/molecules/_course_tool.scss
@@ -13,7 +13,10 @@
   &__icon {
     @apply text-transparent bg-clip-text bg-gradient-to-br from-primary to-primary-gradient leading-none;
 
-    font-size: 52px;
+    &,
+    &.mdi {
+      font-size: 52px;
+    }
 
     &::before {
     }
