Display: Add BaseRating component

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -47,6 +47,7 @@
 @include meta.load-css("atoms/platform_logo");
 @include meta.load-css("atoms/progressbar");
 @include meta.load-css("atoms/radio");
+@include meta.load-css("atoms/rating");
 @include meta.load-css("atoms/skeleton");
 @include meta.load-css("atoms/tags");
 @include meta.load-css("atoms/toast");
