Display: Fix styles for icons, buttons and forms

--- a/assets/css/scss/molecules/_empty_state.scss
+++ b/assets/css/scss/molecules/_empty_state.scss
@@ -7,7 +7,11 @@
     }
 
     &__icon {
-      @apply mb-4 text-9xl text-transparent bg-clip-text bg-gradient-to-br from-primary to-primary-gradient w-32 h-32;
+      @apply mb-4 text-transparent bg-clip-text bg-gradient-to-br from-primary to-primary-gradient w-32 h-32;
+
+      &.mdi {
+        font-size: 8rem;
+      }
     }
 
     &__summary {
