--- a/assets/css/scss/molecules/_toolbar.scss
+++ b/assets/css/scss/molecules/_toolbar.scss
@@ -3,7 +3,7 @@
 
   &-group-left,
   &-group-right {
-    @apply flex flex-row flex-wrap gap-2;
+    @apply flex flex-row flex-wrap gap-2 items-center;
   }
 
   &-separator {
