Internal: AI Helpers implementation in exercises questions - refs #6044

--- a/src/CoreBundle/Resources/views/Admin/Settings/menu.html.twig
+++ b/src/CoreBundle/Resources/views/Admin/Settings/menu.html.twig
@@ -38,6 +38,7 @@
     'tracking': 'chart-box',
     'webservice': 'cloud-sync',
     'stylesheets': 'language-css3',
+    'ai_helpers': 'robot',
 }
 %}
 {% for namespace in schemas|keys %}
@@ -46,7 +47,7 @@
         class="list-group-item border-0 {% if (current_namespace ==  namespace)  %} bg-gray-25 rounded-lg {% endif %} "
         href="{{ path('chamilo_platform_settings', { 'namespace': namespace }) }}"
     >
-        <i class="mdi mdi-{{ array[namespace] }} ch-tool-icon-gradient" style="font-size: 32px; width: 32px; height: 32px; line-height: 32px;" aria-hidden="true" title="{{ namespace | capitalize | trans }}"></i>
+        <i class="mdi mdi-{{ array[namespace] | default('help-circle') }} ch-tool-icon-gradient" style="font-size: 32px; width: 32px; height: 32px; line-height: 32px;" aria-hidden="true" title="{{ namespace | capitalize | trans }}"></i>
 
         {{ namespace | capitalize | trans }}
     </a>
