Language: Change language terms

--- a/src/CoreBundle/Resources/views/Account/change_password.html.twig
+++ b/src/CoreBundle/Resources/views/Account/change_password.html.twig
@@ -61,7 +61,7 @@
                     {% if form.currentPassword.vars.value or form.newPassword.vars.value or form.confirmPassword.vars.value %}
                         {{ "Change Password"|trans }}
                     {% else %}
-                        {{ "Update Settings"|trans }}
+                        {{ "Update settings"|trans }}
                     {% endif %}
                 </button>
             </div>
@@ -71,7 +71,7 @@
             {% if qrCode is defined and user.getMfaEnabled() %}
                 <div class="mt-6 text-center">
                     <h3 class="text-lg font-medium">{{ 'Scan the QR Code to enable 2FA'|trans }}</h3>
-                    <img src="data:image/png;base64,{{ qrCode }}" alt="QR Code for 2FA">
+                    <img src="data:image/png;base64,{{ qrCode }}" alt="{{ 'QR Code for 2FA'|trans }}">
                 </div>
             {% endif %}
 
