--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -851,6 +851,10 @@ form .field {
   @apply absolute inset-0 flex items-center justify-center bg-white bg-opacity-40 backdrop-blur-sm;
 }
 
+.loader-overlay-strong {
+  @apply absolute inset-0 flex items-center justify-center bg-white bg-opacity-95 backdrop-blur-sm;
+}
+
 //@import "~jquery-ui-timepicker-addon/dist/jquery-ui-timepicker-addon.css";
 @import "~@fancyapps/fancybox/dist/jquery.fancybox.css";
 @import "~timepicker/jquery.timepicker.min.css";
