User: Add improvements to 2FA - refs #6162

--- a/src/CoreBundle/Resources/views/Account/change_password.html.twig
+++ b/src/CoreBundle/Resources/views/Account/change_password.html.twig
@@ -55,6 +55,12 @@
                 {{ form_errors(form.enable2FA) }}
             </div>
 
+            <div id="confirm2fa-field" class="mb-4" style="{{ showQRCode is defined and showQRCode ? '' : 'display: none;' }}">
+                {{ form_label(form.confirm2FACode) }}
+                {{ form_widget(form.confirm2FACode, {'attr': {'class': 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'}}) }}
+                {{ form_errors(form.confirm2FACode) }}
+            </div>
+
             <div class="flex items-center justify-center">
                 <input type="hidden" name="_token" value="{{ csrf_token('change_password') }}">
                 <button type="submit" class="btn btn--primary mt-4">
@@ -68,10 +74,11 @@
 
             {{ form_end(form) }}
 
-            {% if qrCode is defined and user.getMfaEnabled() %}
+            {% if qrCode is defined and showQRCode %}
                 <div class="mt-6 text-center">
                     <h3 class="text-lg font-medium">{{ 'Scan the QR Code to enable 2FA'|trans }}</h3>
-                    <img src="data:image/png;base64,{{ qrCode }}" alt="{{ 'QR Code for 2FA'|trans }}">
+                    <img src="data:image/png;base64,{{ qrCode }}" alt="{{ 'QR Code for 2FA'|trans }}" class="block m-auto">
+                    <p class="text-gray-600 mt-2">{{ 'Then enter the 6-digit code shown in your app below.'|trans }}</p>
                 </div>
             {% endif %}
 
