--- a/public/main/template/default/course_description/index.html.twig
+++ b/public/main/template/default/course_description/index.html.twig
@@ -1,37 +1,42 @@
 {% import '@ChamiloCore/Macros/box.html.twig' as macro %}
 {% block content %}
     {% autoescape false %}
-        {% for description in listing.descriptions %}
-            {% if not description is empty %}
-                <div id="description_{{ description.descriptionType }}" class="bg-white shadow-md rounded-lg mb-4" data-id="{{ description.iid }}" data-type="course_description">
-                    <div class="bg-gray-15 border-b border-gray-25 px-4 py-2 flex justify-between items-center">
-                        <div>
-                            {{ description.title }}
-                            {% if description.sessionId %}
-                                {{ description.icon_session }}
-                            {% endif %}
-                        </div>
-                        {% if is_allowed_to_edit %}
-                            <div class="space-x-2">
-                                {% if is_granted('EDIT', description.resourceNode) %}
-                                    <a href="{{ url('legacy_main', {'name': 'course_description/index.php' }) }}?action=edit&id={{ description.iid }}&{{ course_url_params }}" title="{{ 'Edit'|get_lang }}" class="text-primary hover:text-secondary">
-                                        {{ 'ActionIcon::EDIT'|mdi_icon }}
-                                    </a>
-                                {% endif %}
-
-                                {% if is_granted('DELETE', description.resourceNode) %}
-                                    <a href="{{ url('legacy_main', {'name': 'course_description/index.php' }) }}?action=delete&id={{ description.iid }}&{{ course_url_params }}" onclick="javascript:return confirmation('{{ description.title | e('js')}}');" title="{{ 'Delete'|get_lang }}" class="text-danger hover:text-danger-dark">
-                                        {{ 'ActionIcon::DELETE'|mdi_icon }}
-                                    </a>
+        {% if listing.descriptions is not empty %}
+            {% for description in listing.descriptions %}
+                {% if not description is empty %}
+                    <div id="description_{{ description.descriptionType }}" class="bg-white shadow-md rounded-lg mb-4" data-id="{{ description.iid }}" data-type="course_description">
+                        <div class="bg-gray-15 border-b border-gray-25 px-4 py-2 flex justify-between items-center">
+                            <div>
+                                {{ description.title }}
+                                {% if description.sessionId %}
+                                    {{ description.icon_session }}
                                 {% endif %}
                             </div>
-                        {% endif %}
+                            {% if is_allowed_to_edit %}
+                                <div class="space-x-2">
+                                    {% if is_granted('EDIT', description.resourceNode) %}
+                                        <a href="{{ url('legacy_main', {'name': 'course_description/index.php' }) }}?action=edit&id={{ description.iid }}&{{ course_url_params }}" title="{{ 'Edit'|get_lang }}" class="text-primary hover:text-secondary">
+                                            {{ 'ActionIcon::EDIT'|mdi_icon }}
+                                        </a>
+                                    {% endif %}
+                                    {% if is_granted('DELETE', description.resourceNode) %}
+                                        <a href="{{ url('legacy_main', {'name': 'course_description/index.php' }) }}?action=delete&id={{ description.iid }}&{{ course_url_params }}" onclick="javascript:return confirmation('{{ description.title | e('js')}}');" title="{{ 'Delete'|get_lang }}" class="text-danger hover:text-danger-dark">
+                                            {{ 'ActionIcon::DELETE'|mdi_icon }}
+                                        </a>
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                        </div>
+                        <div class="p-4">
+                            {{ description.content }}
+                        </div>
                     </div>
-                    <div class="p-4">
-                        {{ description.content }}
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            <div class="text-center text-gray-500 italic py-8">
+                {{ 'No descriptions available yet.'|get_lang }}
+            </div>
+        {% endif %}
     {% endautoescape %}
 {% endblock %}
