Language: Update language terms names

--- a/src/CoreBundle/Resources/views/Account/change_password.html.twig
+++ b/src/CoreBundle/Resources/views/Account/change_password.html.twig
@@ -76,9 +76,9 @@
 
             {% if qrCode is defined and showQRCode %}
                 <div class="mt-6 text-center">
-                    <h3 class="text-lg font-medium">{{ 'Scan the QR Code to enable 2FA'|trans }}</h3>
-                    <img src="data:image/png;base64,{{ qrCode }}" alt="{{ 'QR Code for 2FA'|trans }}" class="block m-auto">
-                    <p class="text-gray-600 mt-2">{{ 'Then enter the 6-digit code shown in your app below.'|trans }}</p>
+                    <h3 class="text-lg font-medium">{{ 'Scan the QR code to enable 2FA'|trans }}</h3>
+                    <img src="data:image/png;base64,{{ qrCode }}" alt="{{ 'QR code for 2FA'|trans }}" class="block m-auto">
+                    <p class="text-gray-600 mt-2">{{ 'Then enter the 6-digit code shown in your app at the bottom of the form.'|trans }}</p>
                 </div>
             {% endif %}
 
