--- a/assets/css/scss/atoms/_dropdown.scss
+++ b/assets/css/scss/atoms/_dropdown.scss
@@ -1,85 +1,132 @@
-.p-dropdown, .p-multiselect {
-  @apply inline-flex cursor-pointer relative select-none
-      border border-support-3 bg-white rounded-lg transition w-full duration-200
-    hover:border-primary hover:text-gray-90 hover:outline-0 hover:outline-none
-    focus:border-primary focus:text-gray-90 focus:outline-0 focus:outline-none;
+.p-select {
+  @apply inline-flex cursor-pointer relative select-none bg-white border border-gray-50 transition rounded-lg outline-none shadow-none drop-shadow-none w-full;
 
-  font-size: 14px;
+  &:not(.p-disabled) {
+    @apply hover:border-primary hover:text-gray-90;
 
-  .p-dropdown-panel, .p-multiselect-panel {
-    @apply min-w-full;
+    &.p-focus {
+      @apply border-primary text-gray-90 outline-0 outline-none
+    }
   }
 
-  &.p-invalid.p-component {
-    @apply border-error text-error;
+  &.p-variant-filled {
+    &:not(.p-disabled) {
+      &:hover {}
+
+      &.p-focus {}
+    }
   }
-}
 
-select.p-dropdown {
-  @apply px-4 py-2;
-}
+  &.p-invalid {
+    @apply border-danger text-danger;
+  }
 
-.p-dropdown {
+  &.p-disabled {
+    @apply bg-gray-25 opacity-60;
+  }
+
   &-clear-icon {
     @apply absolute top-1/2 -mt-2;
   }
 
-  & &-clear-icon {
-    @apply right-12;
+  &-dropdown {
+    @apply flex items-center justify-center shrink-0 bg-transparent rounded-r-lg pr-4 py-2 text-gray-90 text-body-2;
+
+    .p-select-sm & .p-icon {}
+
+    .p-select-lg & .p-icon {}
   }
-}
 
-.p-dropdown-trigger {
-  @apply flex items-center justify-center flex-shrink-0
-      bg-transparent rounded-r-lg w-9;
-}
+  &-label {
+    @apply block whitespace-nowrap overflow-hidden flex-auto w-[1%] px-4 py-3 overflow-ellipsis cursor-pointer text-gray-90 text-body-2 bg-transparent border-none border-0 outline-none outline-0;
 
-.p-dropdown-label, .p-multiselect-label {
-  @apply block whitespace-nowrap overflow-hidden flex-auto w-[1%] overflow-ellipsis cursor-pointer
-      bg-transparent border-none
-    focus:outline-0 focus:outline-none;
-}
+    &.p-placeholder {
+      @apply text-gray-50;
 
-.p-dropdown-label-empty {
-  @apply overflow-hidden opacity-0;
-}
+      .p-select.p-invalid & {}
+    }
 
-.p-dropdown-panel, .p-multiselect-panel {
-  @apply absolute min-w-full top-2 left-0
-    bg-white rounded-lg text-gray-90 drop-shadow-lg;
+    .p-select:has(.p-select-clear-icon) & {}
 
-  .p-dropdown-items {
-    @apply rounded-lg
-      before:content-[""] before:w-full before:block before:h-3 before:sticky before:bg-white before:z-[2] before:top-0 before:rounded-t-lg before:rounded-b-none
-      after:content-[""] after:w-full after:block after:h-3 after:sticky after:bg-white after:z-[2] after:bottom-0 after:rounded-b-lg after:rounded-t-none;
+    .p-select.p-disabled & {
+      @apply text-gray-50;
+    }
 
-    .p-dropdown-item {
-      @apply px-4 py-2 transition text-body-2 outline-0 outline-none text-gray-90;
+    &-empty {
+      @apply overflow-hidden opacity-0;
+    }
 
-      &.p-highlight {
-        @apply bg-support-3 text-primary;
-      }
+    .p-select-sm & {
+    }
+
+    .p-select-lg & {}
+  }
+
+  input.p-select-label {
+    @apply cursor-default;
+  }
+
+  & &-overlay {
+    @apply cursor-default;
+  }
+
+  &-overlay {
+    @apply absolute top-0 left-0 mt-2 bg-white text-gray-90 border-0 border-none rounded-lg drop-shadow-lg;
+  }
+
+  &-header {}
+
+  &-filter {
+    @apply w-full;
+  }
+
+  &-list-container {
+    @apply overflow-auto;
+  }
+
+  &-option-group {
+
+  }
+
+  &-list {
+    @apply m-0 p-0 list-none gap-0 flex flex-col
+    before:content-[""] before:w-full before:block before:h-3 before:sticky before:bg-white before:z-[2] before:top-0 before:rounded-t-lg before:rounded-b-none
+    after:content-[""] after:w-full after:block after:h-3 after:sticky after:bg-white after:z-[2] after:bottom-0 after:rounded-b-lg after:rounded-t-none;
+  }
+
+  &-option {
+    @apply cursor-pointer text-body-2 whitespace-nowrap relative overflow-hidden flex items-center px-4 py-2 border-0 border-none text-gray-90 transition;
+
+    &:not(.p-select-option-selected):not(.p-disabled).p-focus {
+      @apply bg-white text-primary;
+    }
+
+    &.p-select-option-selected {
+      @apply bg-support-1 text-primary;
 
       &.p-focus {
-        @apply text-primary;
+        @apply bg-support-1 text-primary;
       }
     }
   }
+
+  &-option-blank-icon {
+    @apply shrink-0
+  }
+
+  &-option-check-icon {
+    @apply relative shrink-0 text-support-3;
+  }
+
+  &-empty-message {
+    @apply px-4 py-2;
+  }
+
+  &-fluid {
+    @apply flex w-full;
+  }
 }
 
-.p-dropdown-items-wrapper {
-  @apply overflow-auto rounded-lg;
+select.p-select {
+  @apply px-4 py-2;
 }
-
-.p-dropdown-item {
-  @apply cursor-pointer whitespace-nowrap relative overflow-hidden flex items-center;
-}
-
-.p-dropdown-items {
-  @apply m-0 p-0 list-none;
-}
-
-.p-multiselect-label-container {
-  @apply p-2;
-}
-
